--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-ui-utils": "*",
     "angular-bootstrap": "*",
     "angular-datatables":"*",
+    "angular-ui-calendar":"*",
     "angular-ui-router": "*",
     "angular-ui-select2": "*",
     "angular-ui-sortable": "*",
@@ -27,6 +28,7 @@
     "angular-schema-form-colorpicker":"*",
     "angular-nvd3":"*",
     "bootstrap-vertical-tabs":"*",
+    "fullcalendar":"*",
     "html5-boilerplate":"*",
     "modernizr":"*",
     "state-machine": "*",
