--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,16 @@
   "private": true,
   "dependencies": {
     "jquery": "*",
+    "jquery-ui":"1.11.10",
+    "spinjs": "~2.0.1",
+    "FileSaver": "",
     "require": "*",
-    "angular": "1.3.x",
-    "angular-route": "~1.3.x",
+    "angular": "1.2.x",
+    "angular-route": "~1.2.x",
+    "angular-ui-bootstrap-bower": "0.11.0",
     "angular-flot": "*",
     "angular-deckgrid": "*",
-    "angular-mocks": "~1.3.x",
+    "angular-mocks": "~1.2.x",
     "bootstrap": "~3.1.1",
     "font-awesome": "*",
     "angular-ui-utils": "*",
